--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -2,8 +2,10 @@
 name = "rust"
 version = "0.1.0"
 authors = ["rishav4101 <rajkumarrishav4101@gmail.com>"]
-edition = "2020"
+edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+secp256k1 = "0.15.3"
+rand = "0.6.5"
