--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies]
 secp256k1 = "0.15.3"
 rand = "0.6.5"
+chrono = "0.4"
+serde_json = "1.0"
+sha2 = "0.9.1"
+hex-literal = "0.3.1"
